[gd_scene load_steps=12 format=3 uid="uid://1bhxgfprva73"]

[ext_resource type="Script" path="res://Main/UI/ui.gd" id="1_40nxn"]
[ext_resource type="Shader" path="res://dash_charge.gdshader" id="2_uk8jn"]
[ext_resource type="Texture2D" uid="uid://cbjsouryk4lxq" path="res://icon.svg" id="3_8nc8u"]
[ext_resource type="Texture2D" uid="uid://c8tgftiiskeul" path="res://Assets/UI/Score_Bar.png" id="4_af76q"]
[ext_resource type="Texture2D" uid="uid://detfw7qltasus" path="res://Assets/UI/Menu/highscore_screen.png" id="5_ib0gv"]
[ext_resource type="Texture2D" uid="uid://cdwq02u153h7p" path="res://Assets/UI/health_progress.png" id="6_8q4tx"]
[ext_resource type="Texture2D" uid="uid://cpk67u661rfin" path="res://Assets/UI/sword_progress.png" id="6_14mxm"]
[ext_resource type="Texture2D" uid="uid://dimhby2qbojui" path="res://Assets/UI/Health_Dash_Bars.png" id="6_alj6n"]
[ext_resource type="Texture2D" uid="uid://dggmk1fikpxra" path="res://Assets/UI/dash_progress.png" id="7_m7f44"]
[ext_resource type="Texture2D" uid="uid://dofxcr0afdsmm" path="res://Assets/UI/sword_flame.png" id="7_ramtl"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7m2rp"]
shader = ExtResource("2_uk8jn")
shader_parameter/removed_segments = 1.0
shader_parameter/ring_color = Color(0, 1, 0, 1)
shader_parameter/bg_color = Color(0, 0, 0, 1)
shader_parameter/bg_line_color = Color(0.25, 0.25, 0.25, 1)
shader_parameter/empty_cell_color = Color(0.25, 0.25, 0.25, 1)
shader_parameter/antialias = true
shader_parameter/pixelFactor = 0.0
shader_parameter/radius = 0.7
shader_parameter/line_width = 0.21
shader_parameter/bg_width = 0.28
shader_parameter/start_angle = 0.0
shader_parameter/segment_spacing = 0.0
shader_parameter/segment_angle = 0.0
shader_parameter/segment_count = 0
shader_parameter/cd_color = Color(1, 1, 1, 0.75)
shader_parameter/removed_cd = 0.0

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_40nxn")

[node name="DashCharge" type="TextureRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_7m2rp")
layout_mode = 0
offset_top = 59.0
offset_right = 128.0
offset_bottom = 187.0
texture = ExtResource("3_8nc8u")
stretch_mode = 4
flip_h = true

[node name="Score" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.05208
anchor_right = 1.05208
offset_left = -332.0
offset_bottom = 326.0
grow_horizontal = 0
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_af76q")
stretch_mode = 2
metadata/_edit_use_anchors_ = true

[node name="ScoreText" type="Label" parent="Score"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -282.0
offset_top = 62.8571
offset_right = -37.0002
offset_bottom = 108.857
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Score"
horizontal_alignment = 1

[node name="ScoreValue" type="Label" parent="Score"]
layout_mode = 0
offset_left = 91.4284
offset_top = 111.429
offset_right = 236.428
offset_bottom = 157.429
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 2

[node name="Restart" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -11.5
offset_right = 82.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreScroll" type="TextureRect" parent="Restart"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -451.0
offset_top = -540.0
offset_right = 451.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_ib0gv")

[node name="Score" type="VBoxContainer" parent="Restart"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -237.5
offset_top = -106.0
offset_right = 237.5
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2

[node name="DeathScore" type="Label" parent="Restart/Score"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "SCORE "
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="NewHighscore" type="Label" parent="Restart/Score"]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "New Highscore"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HighScore" type="Label" parent="Restart/Score"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Highscore"
horizontal_alignment = 1

[node name="RestartPrompt" type="Label" parent="Restart"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 16.587
anchor_right = 0.5
anchor_bottom = 16.587
offset_left = -300.0
offset_top = -57.0
offset_right = 300.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Press Enter to restart"
metadata/_edit_use_anchors_ = true

[node name="StatBars" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBar" type="TextureProgressBar" parent="StatBars"]
layout_mode = 0
offset_left = 160.0
offset_top = 52.0
offset_right = 581.0
offset_bottom = 105.0
scale = Vector2(0.6, 0.6)
value = 100.0
texture_progress = ExtResource("6_8q4tx")

[node name="DashBar" type="TextureProgressBar" parent="StatBars"]
layout_mode = 0
offset_left = 103.0
offset_top = 78.0
offset_right = 591.0
offset_bottom = 148.0
scale = Vector2(0.6, 0.6)
max_value = 1.0
step = 0.01
texture_progress = ExtResource("7_m7f44")

[node name="SwordCharge" type="TextureProgressBar" parent="StatBars"]
layout_mode = 0
offset_left = 43.0
offset_top = 197.0
offset_right = 109.0
offset_bottom = 514.0
scale = Vector2(0.6, 0.6)
max_value = 1.0
step = 0.01
value = 1.0
fill_mode = 2
texture_progress = ExtResource("6_14mxm")

[node name="SwordFlame" type="TextureProgressBar" parent="StatBars"]
layout_mode = 0
offset_left = -13.0
offset_top = 197.0
offset_right = 234.0
offset_bottom = 693.0
scale = Vector2(0.6, 0.6)
max_value = 1.0
step = 0.01
value = 1.0
fill_mode = 2
texture_progress = ExtResource("7_ramtl")

[node name="TextureRect" type="TextureRect" parent="StatBars"]
layout_mode = 2
offset_left = -27.0
offset_top = -74.0
offset_right = 850.0
offset_bottom = 822.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("6_alj6n")
stretch_mode = 2

[node name="TransitionButtonPrompt" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 13.0
offset_bottom = 19.0
theme_override_font_sizes/font_size = 40
text = "F"
